refactor: toList로 변경